--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
 @import "./variables.scss";
+@import "./visually-hidden.scss";
+@import "./mixins/button-cursor.scss";
 
 @import "./blocks/header.scss";
