--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,5 @@
-@import "./variables.scss";
-@import "./visually-hidden.scss";
-@import "./mixins/button-cursor.scss";
+@import "./global-styles/fonts.scss";
+@import "./global-styles/body-styles.scss";
+@import "./mixins/visually-hidden.scss";
 
 @import "./blocks/header.scss";
